# lossy-channel

./: .rustfmt.toml  Cargo.toml  LICENSE-MIT  rustfmt  travis-script
src/: common.rs  lib.rs
src/unsync/: mpsc.rs
tests/: unsync.rs
